--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -1,17 +1,85 @@
 /* {
   display: grid;
 } */
+
+/* https://codepen.io/ff0004-red/pen/WxJEJZ */
 #product-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   padding: 10px;
-  background-color: black;
+  background-color: #fdf1ec;
 }
 
 .product-card {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  background-color: grey;
-  margin: 7px;
+  grid-template-rows: 1fr auto auto;
+  grid-template-columns: 2fr 1fr 1fr;
+  background-color: white;
+  margin: 10px;
+  border-radius: 7px;
+  box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+}
+
+.image-container {
+  grid-row: 1 / 4;
+  grid-column: 1 / 2;
+  background-color: lightblue;
+  border-bottom-left-radius: 7px;
+  border-top-left-radius: 7px;
+}
+
+.product-info {
+  grid-column: 2 /4;
+  grid-row: 1 /4;
+  display: grid;
+  grid-template: auto auto auto auto / auto auto;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+}
+
+.product-title {
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
+  color: #474747;
+}
+
+.product-name {
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.product-category {
+  font-size: 13px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #c4c2c2;
+  letter-spacing: 0.2em;
+  text-align: left;
+}
+
+.product-description {
+  grid-row: 2 / 3;
+  grid-column: 1/ 3;
+  text-align: left;
+  padding-right: 10px;
+  color: #474747;
+}
+
+.product-price {
+  grid-row: 4 / 5;
+  grid-column: 1 / 2;
+  color: #474747;
+  font-weight: bolder;
+  font-size: x-large;
+}
+
+.product-buttons {
+  grid-row: 4 / 5;
+  grid-column: 2 / 3;
+}
+
+.quantity-select {
+  color: #474747;
 }
