--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,28 @@ main {
   background-color: #fdf1ec;
   overflow: auto;
 }
+
+.topnav {
+  overflow: hidden;
+  background-color: rgb(2, 2, 19);
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+  text-decoration: none;
+}
+
+.topnav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
