--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,5 +1,34 @@
-#login-form {
-  width: 20%;
-  justify-content: center;
-  margin: 0 auto;
+.login-form-container {
+  grid-area: main;
+  display: grid;
+  padding: 60px;
+}
+.login-card {
+  display: grid;
+  grid-template-columns: auto auto;
+  width: 100%;
+  max-height: 500px;
+  max-width: 672px;
+  justify-self: center;
+}
+.login-image img {
+  display: flex;
+  max-height: 500px;
+  max-width: 336px;
+}
+.login-container {
+  padding-top: 45px;
+  padding-left: 20px;
+}
+#formBasicUsername {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
+}
+#formBasicPassword {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
 }
