--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,10 +1,64 @@
-#register-form {
-  width: 20%;
-  margin: 0 auto;
+.register-form-container {
+  grid-area: main;
+  display: grid;
+  padding: 60px;
 }
-.form-container {
-  /* background-color: black;
-  justify-content: center;
-  width: 40%;
-  border-radius: 5%; */
+.register-card {
+  display: grid;
+  grid-template-columns: auto auto;
+  width: 100%;
+  max-height: 500px;
+  max-width: 672px;
+  justify-self: center;
+}
+.register-image img {
+  display: flex;
+  max-height: 500px;
+  max-width: 336px;
+}
+.register-container {
+  padding-top: 20px;
+  padding-left: 20px;
+}
+#formBasicUsername {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
+}
+#formBasicPassword {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
+}
+#formBasicEmail {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
+}
+#formBasicAddress {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
+}
+#formBasicCity {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
+}
+#formBasicState {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
+}
+#formBasicZip {
+  /* display: inline-block; */
+  width: 76%;
+  text-align: left;
+  float: right;
 }
