--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -15,6 +15,7 @@
   display: flex;
   max-height: 500px;
   max-width: 336px;
+  /* box-shadow: 5px 5px 2px #ccc; */
 }
 .login-container {
   padding-top: 45px;
