--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -15,6 +15,7 @@
   display: flex;
   max-height: 500px;
   max-width: 336px;
+  /* box-shadow: 5px 5px 2px #ccc; */
 }
 .register-container {
   padding-top: 20px;
