--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -14,7 +14,7 @@
   display: grid;
   grid-template-rows: 1fr auto auto;
   grid-template-columns: 2fr 1fr 1fr;
-  background-color: white;
+  background-color: #8b0400;
   margin: 10px;
   border-radius: 7px;
   box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
@@ -23,9 +23,16 @@
 .image-container {
   grid-row: 1 / 4;
   grid-column: 1 / 2;
-  background-color: lightblue;
+  display: flex;
+  justify-content: center;
+  align-content: center;
   border-bottom-left-radius: 7px;
   border-top-left-radius: 7px;
+  background-color: white;
+}
+
+.image-container img {
+  padding-top: 20px;
 }
 
 .product-info {
@@ -42,7 +49,7 @@
 .product-title {
   grid-row: 1 / 2;
   grid-column: 1 / 3;
-  color: #474747;
+  color: #fdf1ec;
 }
 
 .product-name {
@@ -54,7 +61,7 @@
   font-size: 13px;
   font-weight: 500;
   text-transform: uppercase;
-  color: #c4c2c2;
+  color: #fdf1ec;
   letter-spacing: 0.2em;
   text-align: left;
 }
@@ -64,13 +71,14 @@
   grid-column: 1/ 3;
   text-align: left;
   padding-right: 10px;
-  color: #474747;
+  color: #fdf1ec;
+  font-family: Lato;
 }
 
 .product-price {
   grid-row: 4 / 5;
   grid-column: 1 / 2;
-  color: #474747;
+  color: #fdf1ec;
   font-weight: bolder;
   font-size: x-large;
 }
@@ -82,4 +90,19 @@
 
 .quantity-select {
   color: #474747;
+}
+
+.items-added-cart {
+  color: white;
+  font-size: x-large;
+}
+
+.select-qty-message {
+  color: white;
+  font-size: xx-large;
+}
+
+.product-qty-selected {
+  color: white;
+  font-size: xx-large;
 }
