--- a/src/components/Admin.css
+++ b/src/components/Admin.css
@@ -69,3 +69,68 @@
   font-weight: bolder;
   font-size: x-large;
 }
+
+.admin-nav {
+  overflow: hidden;
+  background-color: rgb(37, 36, 36);
+  padding: 20px;
+}
+
+.admin-nav a {
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.admin-nav a:hover {
+  background-color: #ddd;
+  color: black;
+  text-decoration: none;
+}
+
+.admin-nav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
+
+.button-add {
+  background-color: blue;
+  color: white;
+  max-width: 179px;
+  border-radius: 7px;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.add-but-container {
+  text-align: center;
+}
+
+.form-container {
+  display: grid;
+  grid-template: 2fr 1fr/ 1fr 1fr;
+}
+
+.form-title {
+  grid-column: 1 /3;
+  font-size: xx-large;
+}
+.form-inputs {
+  grid-row: 1 / 2;
+  grid-column: 1/ 3;
+}
+.add-form {
+  background-color: black;
+}
+.add-container button {
+  grid-row: 2 / 3;
+  grid-column: 2/ 3;
+  background-color: blue;
+}
+
+.ingredient-add-cancel {
+  grid-row: 2 / 3;
+  grid-column: 2/ 3;
+}
