--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -32,14 +32,14 @@
 }
 
 .image-container img {
-  padding-top: 20px;
+  margin: 10px;
 }
 
 .product-info {
   grid-column: 2 /4;
   grid-row: 1 /4;
   display: grid;
-  grid-template: auto auto auto auto / auto auto;
+  grid-template: auto auto auto auto / auto auto 0.3fr 0.3fr;
   padding-left: 20px;
   padding-top: 10px;
   padding-bottom: 20px;
@@ -48,7 +48,7 @@
 
 .product-title {
   grid-row: 1 / 2;
-  grid-column: 1 / 3;
+  grid-column: 1 / 5;
   color: #fdf1ec;
 }
 
@@ -70,7 +70,7 @@
 
 .product-description {
   grid-row: 2 / 3;
-  grid-column: 1/ 3;
+  grid-column: 1/ 5;
   text-align: left;
   padding-right: 10px;
   color: #fdf1ec;
@@ -78,7 +78,7 @@
 }
 
 .product-price {
-  grid-row: 4 / 5;
+  grid-row: 3 / 4;
   grid-column: 1 / 2;
   color: #fdf1ec;
   font-weight: bolder;
@@ -86,8 +86,8 @@
 }
 
 .product-buttons {
-  grid-row: 4 / 5;
-  grid-column: 2 / 3;
+  grid-row: 3 / 5;
+  grid-column: 3 / 5;
 }
 
 .quantity-select {
@@ -107,4 +107,12 @@
 .product-qty-selected {
   color: white;
   font-size: xx-large;
+}
+
+.product-stock {
+  grid-row: 4 / 5;
+  grid-column: 1 / 2;
+  font-family: Lato;
+  color: white;
+  font-size: x-small;
 }
