--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -5,7 +5,7 @@
 /* https://codepen.io/ff0004-red/pen/WxJEJZ */
 #product-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
   padding: 10px;
   background-color: #fdf1ec;
 }
@@ -82,16 +82,29 @@
   grid-column: 1 / 2;
   color: #fdf1ec;
   font-weight: bolder;
-  font-size: x-large;
+  font-size: 40px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
 
 .product-buttons {
   grid-row: 3 / 5;
   grid-column: 3 / 5;
+  display: grid;
+  grid-template: 1fr 1fr 1fr / auto;
+  align-items: center;
+  justify-items: center;
 }
 
-.quantity-select {
-  color: #474747;
+.product-quantity-container {
+  display: inline-grid;
+  grid-row: 1/2;
+  grid-template: auto auto/ 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+  color: white;
+  padding-bottom: 10px;
 }
 
 .items-added-cart {
@@ -143,4 +156,28 @@ option {
   color: white;
   text-decoration: none;
   border: none;
+}
+.product-add-item {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  float: right;
+}
+
+.product-quantity {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.product-remove-item {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+
+.quantity-head {
+  grid-row: 1/2;
+  grid-column: 1/4;
+}
+
+.view-button {
+  grid-row: 2 / 3;
 }
