--- a/src/components/Admin.css
+++ b/src/components/Admin.css
@@ -144,6 +144,35 @@ a:hover {
   color: inherit;
 }
 
-.admin-order-container span {
-  margin-right: 10px;
+/* .admin-order-container span {
+  background-color: #8b0400;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 25px;
+  color: white;
+  display: flex;
+  padding-left: 20px;
+} */
+
+.status-selection-container {
+  background-color: #8b0400;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 25px;
+  color: white;
+  display: flex;
+  padding-left: 20px;
+}
+
+.category-submit {
+  background-color: #8b0400;
+  color: white;
+  text-decoration: none;
+  border: none;
+}
+
+.order-history-title {
+  background-color: #670502;
+  color: white;
+  font-size: 50px;
 }
