--- a/src/components/UsersOrders.css
+++ b/src/components/UsersOrders.css
@@ -1,4 +1,4 @@
-#order-history-container {
+#order-history-container-users {
   border: 1px solid;
   margin: 20px;
   margin-right: 150px;
@@ -11,9 +11,9 @@
 }
 #order-users-container {
   grid-row: 1/2;
-  grid-column: 1 / 5;
+  grid-column: 1/ 4;
   display: grid;
-  grid-template: 1fr 1fr / auto auto auto;
+  grid-template: 1fr / auto auto auto auto;
 }
 
 .dark-background {
@@ -42,7 +42,7 @@
   grid-column: 1 / 2;
 }
 
-.single-item-container {
+.single-item-container-user {
   display: grid;
   grid-template: auto auto / auto auto auto;
 }
