removed guest login from home, udpated shop to reflect login needed

--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -159,3 +159,10 @@ option {
 .view-button {
   grid-row: 2 / 3;
 }
+
+.home-info-right-shop {
+  background-color: white;
+}
+.log-or-reg-shop {
+  padding: 50px;
+}
