--- a/src/components/MyAccount.css
+++ b/src/components/MyAccount.css
@@ -1,16 +1,64 @@
-.users-data {
+#user-container {
+  width: 100vw;
+  display: grid;
+  grid-template: auto auto auto / auto;
+}
+
+.my-user-header-top {
+  grid-row: 1/2;
+  grid-column: 1 / 2;
+  text-align: center;
+}
+
+.users-data-continer {
   border: 1px solid;
-  margin: 20px;
-  margin-right: 350px;
-  margin-left: 350px;
-  border-radius: 7px;
-  /* display: grid;
-  grid-template: 25% auto / auto; */
+  grid-row: 2/3;
+  grid-column: 1 / 2;
   background-color: rgb(215, 213, 213);
-  font-size: 19px;
+  display: grid;
+  grid-template: auto / auto auto auto auto auto auto auto;
+  margin-right: 150px;
+  margin-left: 150px;
+  border-radius: 7px;
+}
+
+.user-order-history-container {
+  grid-row: 3/4;
 }
 .light-background {
   background-color: rgb(215, 213, 213);
   color: black;
   font-size: 20px;
+}
+
+.my-user-title {
+  background-color: rgb(48, 48, 48);
+  color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.text-field-container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 7px;
+  padding-left: 7px;
+}
+
+.my-user-header-top {
+  background-color: #670502;
+  color: white;
+  font-size: 50px;
+  margin-bottom: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.my-user-header-bottom {
+  background-color: #670502;
+  color: white;
+  font-size: 50px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
