added margin to add product button

--- a/src/components/AdminAdd.css
+++ b/src/components/AdminAdd.css
@@ -12,6 +12,13 @@
   justify-self: center;
 }
 
+.add-form-buttons {
+  margin-right: 5px;
+}
+.ingredient-add {
+  margin-right: 7px;
+}
+
 .form-image {
   margin-right: 20px;
 }
